tests/run-pass/panic1.rs
// ignore-windows: Unwind panicking does not currently work on Windows
fn main() {
    panic!("Miri panic!");
}
